crates/marion-tui/tests/snapshots/home_screens__watch_done_node_with_landed_branch_and_tokens.snap
---
source: crates/marion-tui/tests/home_screens.rs
expression: "at_every_size(&screen(Body::Watch(&v), input, \"watch\"))"
---
--- 80x24 ---
 ◆ marion  ~/code/acme-api                        Start   Watch ◐2   Setup   ?
 ──────────────────────────────────────────────────────────────────────────────

  AGENTS   6 · 2 running · Σ2.1M · 2 need you

  ├─ ◐ codex impl 91cd               3m02s   asks to write .github/workflows/…
  ├─ ✗ codex impl 7b2e               4m50s   exit 101: 3 tests failed
❯ └─ ✓ codex impl 3c33               6m41s   landed marion/t-3c33
       └ TASK             Add token-bucket limiter to /v1/orders
                          ✓ 2 criteria · $ 1 check
         STEERS           14:27  operator · 41 bytes · delivered via turn
         RAN              14:25:49  “142 passed; committing.”
                          14:25:56  $ git commit -am limiter
                          ↑ 7 earlier   K scrolls back
         TOKENS           184k in · 12.9k out · 151k cached
                          ━━━━━━━━━━━━━━━━  41% of context
         RESULT           marion/t-3c33  +84 −12 · 3 files
                          git merge --no-ff marion/t-3c33   c copies
         CAN              steer · resume · interrupt

 ╭────────────────────────────────────────────────────────────────────────────╮
 │ ❯ marion attach 01a093dc-3c33                                same as enter │
 ╰────────────────────────────────────────────────────────────────────────────╯
  j/k move · ! needs you · enter stream · s steer · x cancel           F1 help
--- styles ---
  125  Style::new().fg(Color::Reset).bg(Color::Reset)  "codexcodex✓impl3c33Addto"
   24  Style::new().fg(Color::Reset).bg(Color::Reset).bold()  "marioncodexmarion/t-3c33"
   47  Style::new().fg(Color::Reset).bg(Color::Reset).bold().dim()  "AGENTSTASKSTEERSRANTOKEN"
  581  Style::new().fg(Color::Reset).bg(Color::Reset).dim()  "~/code/acme-apiStartSetu"
    9  Style::new().fg(Color::Rgb(138, 138, 138)).bg(Color::Reset)  "interrupt"
    8  Style::new().fg(Color::Rgb(193, 95, 60)).bg(Color::Reset)  "◆━━━━━━━"
    9  Style::new().fg(Color::Rgb(193, 95, 60)).bg(Color::Reset).bold()  "Watch❯Kc❯"
    3  Style::new().green().bg(Color::Reset)  "+84"
   24  Style::new().red().bg(Color::Reset)  "✗exit101:3testsfailed−12"
   33  Style::new().yellow().bg(Color::Reset)  "◐2◐askstowrite.github/wo"

--- 100x30 ---
 ◆ marion  ~/code/acme-api                                            Start   Watch ◐2   Setup   ?
 ──────────────────────────────────────────────────────────────────────────────────────────────────

  AGENTS   6 · 2 running · Σ2.1M · 2 need you

  ● claude orchestrator 5e1a     ⠋  12m04s    312k  Σ1.3M/5M   waiting on 2 children
  ├─ ● codex impl a1f0           ⠸   2m17s     88k             editing src/limits/bucket.rs
  ├─ ◐ codex impl 91cd               3m02s     41k             asks to write .github/workflows/ci…
  ├─ ✗ codex impl 7b2e               4m50s    120k             exit 101: 3 tests failed
❯ └─ ✓ codex impl 3c33               6m41s    197k             landed marion/t-3c33
       └ TASK             Add token-bucket limiter to /v1/orders
                          ✓ 2 criteria · $ 1 check
         STEERS           14:27  operator · 41 bytes · delivered via turn
         RAN              14:24:35  $ cargo build -q
                          14:25:42  $ cargo test -q limits
                          14:25:49  “142 passed; committing.”
                          14:25:56  $ git commit -am limiter
                          ↑ 5 earlier   K scrolls back
         TOKENS           184k in · 12.9k out · 151k cached
                          ━━━━━━━━━━━━━━━━  41% of context
         RESULT           marion/t-3c33  +84 −12 · 3 files
                          git merge --no-ff marion/t-3c33   c copies
         CAN              steer · resume · interrupt
  ✓ claude review 88f2              1h ago     54k             landed marion/t-88f2


 ╭────────────────────────────────────────────────────────────────────────────────────────────────╮
 │ ❯ marion attach 01a093dc-3c33                                                    same as enter │
 ╰────────────────────────────────────────────────────────────────────────────────────────────────╯
  j/k move · ! needs you · enter stream · s steer · x cancel · m merge                     F1 help
--- styles ---
  174  Style::new().fg(Color::Reset).bg(Color::Reset)  "claudecodexcodexcodex✓im"
   24  Style::new().fg(Color::Reset).bg(Color::Reset).bold()  "marioncodexmarion/t-3c33"
   48  Style::new().fg(Color::Reset).bg(Color::Reset).bold().dim()  "AGENTSTASKSTEERSRANTOKEN"
  797  Style::new().fg(Color::Reset).bg(Color::Reset).dim()  "~/code/acme-apiStartSetu"
    9  Style::new().fg(Color::Rgb(138, 138, 138)).bg(Color::Reset)  "interrupt"
   21  Style::new().fg(Color::Rgb(193, 95, 60)).bg(Color::Reset)  "◆⠋12m04s⠸2m17s━━━━━━━"
    9  Style::new().fg(Color::Rgb(193, 95, 60)).bg(Color::Reset).bold()  "Watch❯Kc❯"
    5  Style::new().green().bg(Color::Reset)  "●●+84"
   24  Style::new().red().bg(Color::Reset)  "✗exit101:3testsfailed−12"
   35  Style::new().yellow().bg(Color::Reset)  "◐2◐askstowrite.github/wo"

--- 160x50 ---
 ◆ marion  ~/code/acme-api                                                                                                        Start   Watch ◐2   Setup   ?
 ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────

  AGENTS   6 · 2 running · Σ2.1M · 2 need you

  ● claude orchestrator 5e1a     ⠋  12m04s    312k  Σ1.3M/5M   waiting on 2 children
  ├─ ● codex impl a1f0           ⠸   2m17s     88k             editing src/limits/bucket.rs
  ├─ ◐ codex impl 91cd               3m02s     41k             asks to write .github/workflows/ci.yml
  ├─ ✗ codex impl 7b2e               4m50s    120k             exit 101: 3 tests failed
❯ └─ ✓ codex impl 3c33               6m41s    197k             landed marion/t-3c33
       └ TASK             Add token-bucket limiter to /v1/orders
                          ✓ cargo test passes
                          ✓ 100 req/min per key, 429 after
                          $ cargo test -q limits
         STEERS           14:27  operator · 41 bytes · delivered via turn
         RAN              14:24:00  read_file src/limits/mod.rs
                          14:24:07  read_file Cargo.toml
                          14:24:14  “I'll add a token bucket keyed by API key.”
                          14:24:21  ~ src/limits/bucket.rs
                          14:24:28  ~ src/routes/orders.rs +1 more
                          14:24:35  $ cargo build -q
                          14:25:42  $ cargo test -q limits
                          14:25:49  “142 passed; committing.”
                          14:25:56  $ git commit -am limiter
         TOKENS           184k in · 12.9k out · 151k cached
                          ▃▂▄▅▇█▆▄▃▄▅▄▃▂▁▁  peak 26k / 30s
                          ━━━━━━━━━━━━━━━━  41% of context
         RESULT           marion/t-3c33  +84 −12 · 3 files
                          git merge --no-ff marion/t-3c33   c copies
         CAN              steer · resume · interrupt
         WORKSPACE        worktree marion/t-3c33   o opens a shell
  ✓ claude review 88f2              1h ago     54k             landed marion/t-88f2

  ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
  ACTIVITY

  14:31  ✓ 3c33  landed marion/t-3c33 · 3 files +84 −12
  14:30  ✗ 7b2e  exit 101 · 3 tests failed in limits::bucket
  14:29  ◐ 91cd  asks to write .github/workflows/ci.yml
  14:29  ● a1f0  spawned by 5e1a · codex impl
  14:24  ● 5e1a  started · claude opus





 ╭────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
 │ ❯ marion attach 01a093dc-3c33                                                                                                                same as enter │
 ╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
  j/k move · ! needs you · enter stream · s steer · x cancel · m merge                                                                                 F1 help
--- styles ---
  345  Style::new().fg(Color::Reset).bg(Color::Reset)  "claudecodexcodexcodex✓im"
   24  Style::new().fg(Color::Reset).bg(Color::Reset).bold()  "marioncodexmarion/t-3c33"
   65  Style::new().fg(Color::Reset).bg(Color::Reset).bold().dim()  "AGENTSTASKSTEERSRANTOKEN"
 1385  Style::new().fg(Color::Reset).bg(Color::Reset).dim()  "~/code/acme-apiStartSetu"
    9  Style::new().fg(Color::Rgb(138, 138, 138)).bg(Color::Reset)  "interrupt"
   37  Style::new().fg(Color::Rgb(193, 95, 60)).bg(Color::Reset)  "◆⠋12m04s⠸2m17s▃▂▄▅▇█▆▄▃▄"
    9  Style::new().fg(Color::Rgb(193, 95, 60)).bg(Color::Reset).bold()  "Watch❯co❯"
    7  Style::new().green().bg(Color::Reset)  "●●+84●●"
   25  Style::new().red().bg(Color::Reset)  "✗exit101:3testsfailed−12"
   39  Style::new().yellow().bg(Color::Reset)  "◐2◐askstowrite.github/wo"
