crates/marion-tui/tests/snapshots/home_screens__watch_empty_forest.snap
---
source: crates/marion-tui/tests/home_screens.rs
expression: "report(&sc, 80, 24)"
---
--- 80x24 ---
 ◆ marion  ~/code/acme-api                           Start   Watch   Setup   ?
 ──────────────────────────────────────────────────────────────────────────────






                           Nothing running here yet.

                          Type a task on Start (tab).









 ╭────────────────────────────────────────────────────────────────────────────╮
 │ ❯ marion run <type> --prompt <text>                                        │
 ╰────────────────────────────────────────────────────────────────────────────╯
  tab Start                                                            F1 help
--- styles ---
   28  Style::new().fg(Color::Reset).bg(Color::Reset).bold()  "marionNothingrunninghere"
    5  Style::new().fg(Color::Reset).bg(Color::Reset).bold().dim()  "tabF1"
  319  Style::new().fg(Color::Reset).bg(Color::Reset).dim()  "~/code/acme-apiStartSetu"
    1  Style::new().fg(Color::Rgb(193, 95, 60)).bg(Color::Reset)  "◆"
    9  Style::new().fg(Color::Rgb(193, 95, 60)).bg(Color::Reset).bold()  "Watchtab❯"
