crates/marion-tui/tests/snapshots/home_screens__watch_no_supervisor.snap
---
source: crates/marion-tui/tests/home_screens.rs
expression: "report(&sc, 80, 24)"
---
--- 80x24 ---
 ◆ marion  ~/code/acme-api                           Start   Watch   Setup   ?
 ──────────────────────────────────────────────────────────────────────────────






                   No supervisor is running for this project.

 Start a task on the Start tab, or run marion run <type> --prompt … in a shell.









 ╭────────────────────────────────────────────────────────────────────────────╮
 │ ❯ marion run <type> --prompt <text>                                        │
 ╰────────────────────────────────────────────────────────────────────────────╯
  j/k move · enter attach · s steer · x cancel · m merge               F1 help
--- styles ---
   42  Style::new().fg(Color::Reset).bg(Color::Reset).bold()  "marionNosupervisorisrunn"
   13  Style::new().fg(Color::Reset).bg(Color::Reset).bold().dim()  "j/kentersxmF1"
  363  Style::new().fg(Color::Reset).bg(Color::Reset).dim()  "~/code/acme-apiStartSetu"
    1  Style::new().fg(Color::Rgb(193, 95, 60)).bg(Color::Reset)  "◆"
   30  Style::new().fg(Color::Rgb(193, 95, 60)).bg(Color::Reset).bold()  "Watchmarionrun<type>--pr"
