crates/marion-tui/tests/snapshots/home_screens__watch_parent_shows_its_subtree_and_its_budget.snap
---
source: crates/marion-tui/tests/home_screens.rs
expression: "at_every_size(&screen(Body::Watch(&v), input, \"watch\"))"
---
--- 80x24 ---
 ◆ marion  ~/code/acme-api                        Start   Watch ◐2   Setup   ?
 ──────────────────────────────────────────────────────────────────────────────

  NODES   6 · 2 running · Σ2.1M · 2 need you

❯ ● claude orchestrator 5e1a     ⠋  12m04s   waiting on 2 children
    └ TASK             Ship the rate limiter
                       ✓ 2 criteria · $ 1 check
      RUNNING          14:24:00  read_file src/limits/mod.rs
                       14:24:07  read_file Cargo.toml
                       14:24:14  “I'll add a token bucket keyed by API key.”
      SUBTREE          Σ1.3M tokens · 14 Σ files · 12m04s wall · 6 nodes (2
                       running) · budget 1.3M / 1.5M
  ├─ ● codex impl a1f0           ⠸   2m17s   editing src/limits/bucket.rs
  ├─ ◐ codex impl 91cd               3m02s   asks to write .github/workflows/…
  ├─ ✗ codex impl 7b2e               4m50s   exit 101: 3 tests failed
  └─ ✓ codex impl 3c33               6m41s   landed marion/t-3c33
  ✓ claude review 88f2              1h ago   landed marion/t-88f2


 ╭────────────────────────────────────────────────────────────────────────────╮
 │ ❯ marion attach 01a093dc-5e1a                                same as enter │
 ╰────────────────────────────────────────────────────────────────────────────╯
  j/k move · enter attach · s steer · x cancel · c copy merge          F1 help
--- styles ---
  107  Style::new().fg(Color::Reset).bg(Color::Reset)  "orchestrator5e1aShipther"
   12  Style::new().fg(Color::Reset).bg(Color::Reset).bold()  "marionclaude"
   36  Style::new().fg(Color::Reset).bg(Color::Reset).bold().dim()  "NODESTASKRUNNINGSUBTREEj"
  592  Style::new().fg(Color::Reset).bg(Color::Reset).dim()  "~/code/acme-apiStartSetu"
   14  Style::new().fg(Color::Rgb(193, 95, 60)).bg(Color::Reset)  "◆⠋12m04s⠸2m17s"
    7  Style::new().fg(Color::Rgb(193, 95, 60)).bg(Color::Reset).bold()  "Watch❯❯"
    2  Style::new().green().bg(Color::Reset)  "●●"
   21  Style::new().red().bg(Color::Reset)  "✗exit101:3testsfailed"
   97  Style::new().yellow().bg(Color::Reset)  "◐2Σ1.3Mtokens·14Σfiles·1"

--- 100x30 ---
 ◆ marion  ~/code/acme-api                                            Start   Watch ◐2   Setup   ?
 ──────────────────────────────────────────────────────────────────────────────────────────────────

  NODES   6 · 2 running · Σ2.1M · 2 need you

❯ ● claude orchestrator 5e1a     ⠋  12m04s    312k  Σ1.3M/5M   waiting on 2 children
    └ TASK             Ship the rate limiter
                       + marion: When you have finished, call the `report` tool of the marion MCP…
                       ✓ cargo test passes
                       ✓ 100 req/min per key, 429 after
                       $ cargo test -q limits
      RUNNING          14:24:00  read_file src/limits/mod.rs
                       14:24:07  read_file Cargo.toml
                       14:24:14  “I'll add a token bucket keyed by API key.”
      SUBTREE          Σ1.3M tokens · 14 Σ files · 12m04s wall · 6 nodes (2 running) · budget 1.3M
                       / 1.5M
  ├─ ● codex impl a1f0           ⠸   2m17s     88k             editing src/limits/bucket.rs
  ├─ ◐ codex impl 91cd               3m02s     41k             asks to write .github/workflows/ci…
  ├─ ✗ codex impl 7b2e               4m50s    120k             exit 101: 3 tests failed
  └─ ✓ codex impl 3c33               6m41s    197k             landed marion/t-3c33
  ✓ claude review 88f2              1h ago     54k             landed marion/t-88f2





 ╭────────────────────────────────────────────────────────────────────────────────────────────────╮
 │ ❯ marion attach 01a093dc-5e1a                                                    same as enter │
 ╰────────────────────────────────────────────────────────────────────────────────────────────────╯
  j/k move · enter attach · s steer · x cancel · c copy merge · ! next attention           F1 help
--- styles ---
  164  Style::new().fg(Color::Reset).bg(Color::Reset)  "orchestrator5e1aShipther"
   12  Style::new().fg(Color::Reset).bg(Color::Reset).bold()  "marionclaude"
   37  Style::new().fg(Color::Reset).bg(Color::Reset).bold().dim()  "NODESTASKRUNNINGSUBTREEj"
  742  Style::new().fg(Color::Reset).bg(Color::Reset).dim()  "~/code/acme-apiStartSetu"
   14  Style::new().fg(Color::Rgb(193, 95, 60)).bg(Color::Reset)  "◆⠋12m04s⠸2m17s"
    7  Style::new().fg(Color::Rgb(193, 95, 60)).bg(Color::Reset).bold()  "Watch❯❯"
    2  Style::new().green().bg(Color::Reset)  "●●"
   21  Style::new().red().bg(Color::Reset)  "✗exit101:3testsfailed"
   99  Style::new().yellow().bg(Color::Reset)  "◐2Σ1.3Mtokens·14Σfiles·1"

--- 160x50 ---
 ◆ marion  ~/code/acme-api                                                                                                        Start   Watch ◐2   Setup   ?
 ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────

  NODES   6 · 2 running · Σ2.1M · 2 need you

❯ ● claude orchestrator 5e1a     ⠋  12m04s    312k  Σ1.3M/5M   waiting on 2 children
    └ TASK             Ship the rate limiter
                       + marion: When you have finished, call the `report` tool of the marion MCP server exactly once.
                       ✓ cargo test passes
                       ✓ 100 req/min per key, 429 after
                       $ cargo test -q limits
      RUNNING          14:24:00  read_file src/limits/mod.rs
                       14:24:07  read_file Cargo.toml
                       14:24:14  “I'll add a token bucket keyed by API key.”
      SUBTREE          Σ1.3M tokens · 14 Σ files · 12m04s wall · 6 nodes (2 running) · budget 1.3M / 1.5M
  ├─ ● codex impl a1f0           ⠸   2m17s     88k             editing src/limits/bucket.rs
  ├─ ◐ codex impl 91cd               3m02s     41k             asks to write .github/workflows/ci.yml
  ├─ ✗ codex impl 7b2e               4m50s    120k             exit 101: 3 tests failed
  └─ ✓ codex impl 3c33               6m41s    197k             landed marion/t-3c33
  ✓ claude review 88f2              1h ago     54k             landed marion/t-88f2

  ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
  ACTIVITY

  14:31  ✓ 3c33  landed marion/t-3c33 · 3 files +84 −12
  14:30  ✗ 7b2e  exit 101 · 3 tests failed in limits::bucket
  14:29  ◐ 91cd  asks to write .github/workflows/ci.yml
  14:29  ● a1f0  spawned by 5e1a · codex impl
  14:24  ● 5e1a  started · claude opus

















 ╭────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
 │ ❯ marion attach 01a093dc-5e1a                                                                                                                same as enter │
 ╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
  j/k move · enter attach · s steer · x cancel · c copy merge · ! next attention                                                                       F1 help
--- styles ---
  185  Style::new().fg(Color::Reset).bg(Color::Reset)  "orchestrator5e1aShipther"
   12  Style::new().fg(Color::Reset).bg(Color::Reset).bold()  "marionclaude"
   45  Style::new().fg(Color::Reset).bg(Color::Reset).bold().dim()  "NODESTASKRUNNINGSUBTREEA"
 1264  Style::new().fg(Color::Reset).bg(Color::Reset).dim()  "~/code/acme-apiStartSetu"
   14  Style::new().fg(Color::Rgb(193, 95, 60)).bg(Color::Reset)  "◆⠋12m04s⠸2m17s"
    7  Style::new().fg(Color::Rgb(193, 95, 60)).bg(Color::Reset).bold()  "Watch❯❯"
    4  Style::new().green().bg(Color::Reset)  "●●●●"
   22  Style::new().red().bg(Color::Reset)  "✗exit101:3testsfailed✗"
  103  Style::new().yellow().bg(Color::Reset)  "◐2Σ1.3Mtokens·14Σfiles·1"
