crates/marion-tui/tests/snapshots/home_screens__watch_stream_shows_each_end_once_and_every_changed_file_name.snap
---
source: crates/marion-tui/tests/home_screens.rs
expression: "report(&screen, 92, 36)"
---
--- 92x36 ---
 ◆ marion  ~/code/acme-api                                    Start   Watch ◐2   Setup   ?
 ──────────────────────────────────────────────────────────────────────────────────────────

  AGENTS   6 · 2 running · Σ2.1M · 2 need you

  ● claude orchestrator 5e1a     ⠋  12m04s   waiting on 2 children
❯ ├─ ● codex impl a1f0           ⠸   2m17s   editing src/limits/bucket.rs
  │    └ TASK             Add a --top N option to wordfreq.py
  │                       + marion: When you have finished, call the `report` tool of the…
  │                       ✓ cargo test passes
  │                       ✓ 100 req/min per key, 429 after
  │                       $ cargo test -q limits
  │      RUNNING          23:38:14  $ cat AGENTS.md tests/test_wordfreq.py; git branch --…
  │                       23:38:14  ✓ 22ms
  │                       23:38:24  ~ …/options/parsing/arguments/limits/top_n_argument.py
  │                       23:38:24  ✓ 52ms
  │                       23:38:25  $ python3 -m unittest -q; git diff --check; git diff …
  │                       23:38:27  exit 1 · 2.1s
  ├─ ◐ codex impl 91cd               3m02s   asks to write .github/workflows/ci.yml
  ├─ ✗ codex impl 7b2e               4m50s   exit 101: 3 tests failed
  └─ ✓ codex impl 3c33               6m41s   landed marion/t-3c33
  ✓ claude review 88f2              1h ago   landed marion/t-88f2

  ────────────────────────────────────────────────────────────────────────────────────────
  ACTIVITY

  14:31  ✓ 3c33  landed marion/t-3c33 · 3 files +84 −12
  14:30  ✗ 7b2e  exit 101 · 3 tests failed in limits::bucket
  14:29  ◐ 91cd  asks to write .github/workflows/ci.yml
  14:29  ● a1f0  spawned by 5e1a · codex impl
  14:24  ● 5e1a  started · claude opus

 ╭────────────────────────────────────────────────────────────────────────────────────────╮
 │ ❯ marion attach 01a0e64e-433f                                                    enter │
 ╰────────────────────────────────────────────────────────────────────────────────────────╯
  j/k move · enter attach · s steer · x cancel · m merge · ! next attention        F1 help
--- styles ---
  289  Style::new().fg(Color::Reset).bg(Color::Reset)  "claudeimpla1f0Adda--topN"
   11  Style::new().fg(Color::Reset).bg(Color::Reset).bold()  "marioncodex"
   39  Style::new().fg(Color::Reset).bg(Color::Reset).bold().dim()  "AGENTSTASKRUNNINGACTIVIT"
  935  Style::new().fg(Color::Reset).bg(Color::Reset).dim()  "~/code/acme-apiStartSetu"
   14  Style::new().fg(Color::Rgb(193, 95, 60)).bg(Color::Reset)  "◆⠋12m04s⠸2m17s"
    7  Style::new().fg(Color::Rgb(193, 95, 60)).bg(Color::Reset).bold()  "Watch❯❯"
   14  Style::new().green().bg(Color::Reset)  "●●✓22ms✓52ms●●"
   32  Style::new().red().bg(Color::Reset)  "exit1·2.1s✗exit101:3test"
   39  Style::new().yellow().bg(Color::Reset)  "◐2◐askstowrite.github/wo"
